syntax = "proto3";

package group.v1;

option go_package = "github.com/koki-algebra/go_server_sample/internal/infra/grpc/generated/group/v1";

service GroupService {
  rpc GetByID(GetByIDRequest) returns (GetByIDResponse);
}

message GetByIDRequest {
  string id = 1;
}

message GetByIDResponse {
  string id = 1;
  string name = 2;
}
